--- a/js-basic-book-master/04/factorial.html
+++ b/js-basic-book-master/04/factorial.html
@@ -9,5 +9,19 @@
 </head>
 <body>
 
+
+	<script>
+	  var n = prompt("숫자를 입력하세요");
+	  var nFact = 1;
+	  var i = 2;
+
+	  while(i <= n) {
+		  nFact *= i;
+		  i++;
+	  }
+
+	  document.write(n + "!= " + nFact);
+
+	</script>
 </body>
 </html>
