--- a/js-basic-book-master/04/quiz-1.html
+++ b/js-basic-book-master/04/quiz-1.html
@@ -13,6 +13,7 @@
 	</style>
 </head>
 <body>
+
 	<h2>짝수일까, 홀수일까</h2>
 
 	<script>
@@ -21,5 +22,18 @@
 	if (nNumber === 0) document.write("짝수입니다");	
 	else document.write("홀수입니다");
 	</script>
+
+	<!--	/*
+	if(userNumber != null){
+		if(userNumber % 2 == 0)
+		  document.write(userNumber + "는 짝수입니다");
+		else
+		  document.write(userNumber + "는 홀수입니다");
+	}
+	if(userNumber != null){
+		if(userNumber % 2 == 0)
+	}
+	*/-->
+
 </body>
 </html>
