--- a/js-basic-book-master/07/index.html
+++ b/js-basic-book-master/07/index.html
@@ -4,12 +4,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>To do list</title>
-	<link rel="stylesheet" href="css/input.css">
 	<link rel="stylesheet" href="css/list.css">
+	<link rel="stylesheet" href="css/input.css">
 </head>
 <body>
 	<div id="wrapper">
-		<h2>여행 준비물 점검 목록</h2>
+		<h2>여행 준비물 목록</h2>
 		<form>
 			<input type="text" id="item" autofocus="true">
 			<button type="button" id="add" class="addBtn">추가</button>
@@ -17,6 +17,6 @@
 		<div id="itemList"></div>
 	</div>    
 	
-	<script src="js/checklist.js"></script>
+	<script src="js/checklist2.js"></script>
 </body>
 </html>
